--- a/estilos/style.css
+++ b/estilos/style.css
@@ -47,10 +47,10 @@ header > p {
     text-align: center;
     font-size: 1.2em;
     max-width: 500px;
-    margin: auto;
     padding-right: 10px;
     padding-left: 10px;
-    margin-bottom: 20px;
+    margin: auto;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.308);
 }
 
